chore(*): playground spacers

--- a/playground/css/utility.css
+++ b/playground/css/utility.css
@@ -10,6 +10,7 @@
     --sgds-breakpoint-lg: var(--sgds-breakpoint-lg);
     --sgds-breakpoint-xl: var(--sgds-breakpoint-xl);
     --sgds-breakpoint-2-xl: var(--sgds-breakpoint-2-xl);
+    --sgds-spacing-none: var(--sgds-spacer-0);
     --sgds-spacing-3-xs: var(--sgds-spacer-1);
     --sgds-spacing-2-xs: var(--sgds-spacer-2);
     --sgds-spacing-xs: var(--sgds-spacer-3);
@@ -18,6 +19,9 @@
     --sgds-spacing-lg: var(--sgds-spacer-6);
     --sgds-spacing-xl: var(--sgds-spacer-7);
     --sgds-spacing-2-xl: var(--sgds-spacer-8);
+    --sgds-spacing-3-xl: var(--sgds-spacer-9);
+    --sgds-spacing-4-xl: var(--sgds-spacer-10);
+    --sgds-spacing-5-xl: var(--sgds-spacer-11);
     --sgds-background-color-default: var(--sgds-bg-default);
     --sgds-background-color-alternate: var(--sgds-bg-alternate);
     --sgds-background-color-fixed-light: var(--sgds-bg-fixed-light);
@@ -284,8 +288,143 @@
   .sgds\:top-27 {
     top: calc(var(--sgds-spacing) * 27);
   }
+  .sgds\:bottom-1 {
+    bottom: calc(var(--sgds-spacing) * 1);
+  }
+  .sgds\:left-1 {
+    left: calc(var(--sgds-spacing) * 1);
+  }
+  .sgds\:m-1 {
+    margin: calc(var(--sgds-spacing) * 1);
+  }
+  .sgds\:m-2 {
+    margin: calc(var(--sgds-spacing) * 2);
+  }
+  .sgds\:m-2-xl {
+    margin: var(--sgds-spacing-2-xl);
+  }
+  .sgds\:m-2-xs {
+    margin: var(--sgds-spacing-2-xs);
+  }
+  .sgds\:m-3 {
+    margin: calc(var(--sgds-spacing) * 3);
+  }
+  .sgds\:m-3-xl {
+    margin: var(--sgds-spacing-3-xl);
+  }
+  .sgds\:m-3-xs {
+    margin: var(--sgds-spacing-3-xs);
+  }
+  .sgds\:m-4 {
+    margin: calc(var(--sgds-spacing) * 4);
+  }
+  .sgds\:m-4-xl {
+    margin: var(--sgds-spacing-4-xl);
+  }
+  .sgds\:m-5 {
+    margin: calc(var(--sgds-spacing) * 5);
+  }
+  .sgds\:m-5-xl {
+    margin: var(--sgds-spacing-5-xl);
+  }
+  .sgds\:m-6 {
+    margin: calc(var(--sgds-spacing) * 6);
+  }
+  .sgds\:m-8 {
+    margin: calc(var(--sgds-spacing) * 8);
+  }
+  .sgds\:m-12 {
+    margin: calc(var(--sgds-spacing) * 12);
+  }
+  .sgds\:m-16 {
+    margin: calc(var(--sgds-spacing) * 16);
+  }
+  .sgds\:m-24 {
+    margin: calc(var(--sgds-spacing) * 24);
+  }
+  .sgds\:m-32 {
+    margin: calc(var(--sgds-spacing) * 32);
+  }
+  .sgds\:m-40 {
+    margin: calc(var(--sgds-spacing) * 40);
+  }
+  .sgds\:m-auto {
+    margin: auto;
+  }
+  .sgds\:m-lg {
+    margin: var(--sgds-spacing-lg);
+  }
+  .sgds\:m-md {
+    margin: var(--sgds-spacing-md);
+  }
+  .sgds\:m-none {
+    margin: var(--sgds-spacing-none);
+  }
+  .sgds\:m-sm {
+    margin: var(--sgds-spacing-sm);
+  }
+  .sgds\:m-xl {
+    margin: var(--sgds-spacing-xl);
+  }
+  .sgds\:m-xs {
+    margin: var(--sgds-spacing-xs);
+  }
+  .sgds\:mx-2 {
+    margin-inline: calc(var(--sgds-spacing) * 2);
+  }
+  .sgds\:mx-3-xl {
+    margin-inline: var(--sgds-spacing-3-xl);
+  }
+  .sgds\:mx-4 {
+    margin-inline: calc(var(--sgds-spacing) * 4);
+  }
+  .sgds\:mx-12 {
+    margin-inline: calc(var(--sgds-spacing) * 12);
+  }
+  .sgds\:mx-auto {
+    margin-inline: auto;
+  }
+  .sgds\:mx-md {
+    margin-inline: var(--sgds-spacing-md);
+  }
+  .sgds\:mx-xs {
+    margin-inline: var(--sgds-spacing-xs);
+  }
+  .sgds\:my-2 {
+    margin-block: calc(var(--sgds-spacing) * 2);
+  }
+  .sgds\:my-2-xl {
+    margin-block: var(--sgds-spacing-2-xl);
+  }
+  .sgds\:my-3 {
+    margin-block: calc(var(--sgds-spacing) * 3);
+  }
+  .sgds\:my-6 {
+    margin-block: calc(var(--sgds-spacing) * 6);
+  }
+  .sgds\:my-8 {
+    margin-block: calc(var(--sgds-spacing) * 8);
+  }
+  .sgds\:my-lg {
+    margin-block: var(--sgds-spacing-lg);
+  }
   .sgds\:my-md {
     margin-block: var(--sgds-spacing-md);
+  }
+  .sgds\:my-sm {
+    margin-block: var(--sgds-spacing-sm);
+  }
+  .sgds\:my-xl {
+    margin-block: var(--sgds-spacing-xl);
+  }
+  .sgds\:my-xs {
+    margin-block: var(--sgds-spacing-xs);
+  }
+  .sgds\:mt-3 {
+    margin-top: calc(var(--sgds-spacing) * 3);
+  }
+  .sgds\:mt-4 {
+    margin-top: calc(var(--sgds-spacing) * 4);
   }
   .sgds\:mt-lg {
     margin-top: var(--sgds-spacing-lg);
@@ -293,11 +432,29 @@
   .sgds\:mt-md {
     margin-top: var(--sgds-spacing-md);
   }
+  .sgds\:mt-sm {
+    margin-top: var(--sgds-spacing-sm);
+  }
+  .sgds\:mt-xl {
+    margin-top: var(--sgds-spacing-xl);
+  }
+  .sgds\:mt-xs {
+    margin-top: var(--sgds-spacing-xs);
+  }
+  .sgds\:mb-2 {
+    margin-bottom: calc(var(--sgds-spacing) * 2);
+  }
   .sgds\:mb-2-xl {
     margin-bottom: var(--sgds-spacing-2-xl);
   }
   .sgds\:mb-2-xs {
     margin-bottom: var(--sgds-spacing-2-xs);
+  }
+  .sgds\:mb-3 {
+    margin-bottom: calc(var(--sgds-spacing) * 3);
+  }
+  .sgds\:mb-4 {
+    margin-bottom: calc(var(--sgds-spacing) * 4);
   }
   .sgds\:mb-lg {
     margin-bottom: var(--sgds-spacing-lg);
@@ -316,6 +473,9 @@
   }
   .sgds\:ml-md {
     margin-left: var(--sgds-spacing-md);
+  }
+  .sgds\:block {
+    display: block;
   }
   .sgds\:flex {
     display: flex;
@@ -341,6 +501,12 @@
   .sgds\:h-20 {
     height: calc(var(--sgds-spacing) * 20);
   }
+  .sgds\:h-32 {
+    height: calc(var(--sgds-spacing) * 32);
+  }
+  .sgds\:h-40 {
+    height: calc(var(--sgds-spacing) * 40);
+  }
   .sgds\:h-250 {
     height: calc(var(--sgds-spacing) * 250);
   }
@@ -349,6 +515,12 @@
   }
   .sgds\:h-\[calc\(100vh-108px\)\] {
     height: calc(100vh - 108px);
+  }
+  .sgds\:min-h-16 {
+    min-height: calc(var(--sgds-spacing) * 16);
+  }
+  .sgds\:min-h-20 {
+    min-height: calc(var(--sgds-spacing) * 20);
   }
   .sgds\:min-h-24 {
     min-height: calc(var(--sgds-spacing) * 24);
@@ -371,6 +543,15 @@
   .sgds\:w-18 {
     width: calc(var(--sgds-spacing) * 18);
   }
+  .sgds\:w-20 {
+    width: calc(var(--sgds-spacing) * 20);
+  }
+  .sgds\:w-32 {
+    width: calc(var(--sgds-spacing) * 32);
+  }
+  .sgds\:w-40 {
+    width: calc(var(--sgds-spacing) * 40);
+  }
   .sgds\:w-68 {
     width: calc(var(--sgds-spacing) * 68);
   }
@@ -379,6 +560,9 @@
   }
   .sgds\:max-w-md {
     max-width: var(--sgds-spacing-md);
+  }
+  .sgds\:border-collapse {
+    border-collapse: collapse;
   }
   .sgds\:cursor-pointer {
     cursor: pointer;
@@ -416,8 +600,17 @@
   .sgds\:gap-2-xs {
     gap: var(--sgds-gap-2-xs);
   }
+  .sgds\:gap-3 {
+    gap: calc(var(--sgds-spacing) * 3);
+  }
   .sgds\:gap-3-xl {
     gap: var(--sgds-gap-3-xl);
+  }
+  .sgds\:gap-4 {
+    gap: calc(var(--sgds-spacing) * 4);
+  }
+  .sgds\:gap-6 {
+    gap: calc(var(--sgds-spacing) * 6);
   }
   .sgds\:gap-form-2-xl {
     gap: var(--sgds-gap-form-2-xl);
@@ -451,6 +644,13 @@
   }
   .sgds\:gap-xs {
     gap: var(--sgds-gap-xs);
+  }
+  .sgds\:space-y-2-xl {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(var(--sgds-spacing-2-xl) * var(--tw-space-y-reverse));
+      margin-block-end: calc(var(--sgds-spacing-2-xl) * calc(1 - var(--tw-space-y-reverse)));
+    }
   }
   .sgds\:space-y-md {
     :where(& > :not(:last-child)) {
@@ -493,6 +693,9 @@
       margin-block-start: calc(var(--sgds-space-paragraph-xl) * var(--tw-space-y-reverse));
       margin-block-end: calc(var(--sgds-space-paragraph-xl) * calc(1 - var(--tw-space-y-reverse)));
     }
+  }
+  .sgds\:overflow-hidden {
+    overflow: hidden;
   }
   .sgds\:overflow-y-scroll {
     overflow-y: scroll;
@@ -567,6 +770,18 @@
   .sgds\:border-form-thick {
     border-style: var(--tw-border-style);
     border-width: var(--sgds-border-width-form-thick);
+  }
+  .sgds\:border-r {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 1px;
+  }
+  .sgds\:border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
+  .sgds\:border-l {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 1px;
   }
   .sgds\:border-none {
     --tw-border-style: none;
@@ -894,17 +1109,56 @@
   .sgds\:p-2-xl {
     padding: var(--sgds-spacing-2-xl);
   }
+  .sgds\:p-2-xs {
+    padding: var(--sgds-spacing-2-xs);
+  }
+  .sgds\:p-3 {
+    padding: calc(var(--sgds-spacing) * 3);
+  }
+  .sgds\:p-3-xl {
+    padding: var(--sgds-spacing-3-xl);
+  }
+  .sgds\:p-3-xs {
+    padding: var(--sgds-spacing-3-xs);
+  }
+  .sgds\:p-4 {
+    padding: calc(var(--sgds-spacing) * 4);
+  }
+  .sgds\:p-4-xl {
+    padding: var(--sgds-spacing-4-xl);
+  }
+  .sgds\:p-5-xl {
+    padding: var(--sgds-spacing-5-xl);
+  }
+  .sgds\:p-6 {
+    padding: calc(var(--sgds-spacing) * 6);
+  }
   .sgds\:p-lg {
     padding: var(--sgds-spacing-lg);
   }
   .sgds\:p-md {
     padding: var(--sgds-spacing-md);
   }
+  .sgds\:p-none {
+    padding: var(--sgds-spacing-none);
+  }
   .sgds\:p-sm {
     padding: var(--sgds-spacing-sm);
   }
   .sgds\:p-xl {
     padding: var(--sgds-spacing-xl);
+  }
+  .sgds\:p-xs {
+    padding: var(--sgds-spacing-xs);
+  }
+  .sgds\:px-2 {
+    padding-inline: calc(var(--sgds-spacing) * 2);
+  }
+  .sgds\:px-5 {
+    padding-inline: calc(var(--sgds-spacing) * 5);
+  }
+  .sgds\:px-6 {
+    padding-inline: calc(var(--sgds-spacing) * 6);
   }
   .sgds\:px-lg {
     padding-inline: var(--sgds-spacing-lg);
@@ -915,14 +1169,35 @@
   .sgds\:px-xs {
     padding-inline: var(--sgds-spacing-xs);
   }
+  .sgds\:py-1 {
+    padding-block: calc(var(--sgds-spacing) * 1);
+  }
+  .sgds\:py-2 {
+    padding-block: calc(var(--sgds-spacing) * 2);
+  }
   .sgds\:py-2-xl {
     padding-block: var(--sgds-spacing-2-xl);
+  }
+  .sgds\:py-3 {
+    padding-block: calc(var(--sgds-spacing) * 3);
   }
   .sgds\:py-3-xs {
     padding-block: var(--sgds-spacing-3-xs);
   }
+  .sgds\:py-lg {
+    padding-block: var(--sgds-spacing-lg);
+  }
+  .sgds\:py-md {
+    padding-block: var(--sgds-spacing-md);
+  }
   .sgds\:py-sm {
     padding-block: var(--sgds-spacing-sm);
+  }
+  .sgds\:text-center {
+    text-align: center;
+  }
+  .sgds\:text-left {
+    text-align: left;
   }
   .sgds\:font-display {
     font-family: var(--sgds-font-display);
@@ -1248,6 +1523,28 @@
   }
   .sgds\:opacity-100 {
     opacity: var(--sgds-opacity-100);
+  }
+  .sgds\:transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
+    transition-timing-function: var(--tw-ease, ease);
+    transition-duration: var(--tw-duration, 0s);
+  }
+  .sgds\:transition-all {
+    transition-property: all;
+    transition-timing-function: var(--tw-ease, ease);
+    transition-duration: var(--tw-duration, 0s);
+  }
+  .sgds\:transition-opacity {
+    transition-property: opacity;
+    transition-timing-function: var(--tw-ease, ease);
+    transition-duration: var(--tw-duration, 0s);
+  }
+  .sgds\:hover\:bg-surface-raised {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--sgds-background-color-surface-raised);
+      }
+    }
   }
   .sgds\:md\:w-68 {
     @media (width >= var(--sgds-breakpoint-md)) {
