--- a/src/components/Sidebar/sidebar-section.css
+++ b/src/components/Sidebar/sidebar-section.css
@@ -1,7 +1,7 @@
 .sidebar-section {
   display: flex;
   flex-direction: column;
-  padding: var(--sgds-padding-md) var(--sgds-padding-xs);
+  padding: var(--sgds-padding-md) 0;
   border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
 }
 
@@ -20,6 +20,7 @@
   padding: var(--sgds-padding-xs);
   padding-right: var(--sgds-padding-none);
   transition: all var(--sgds-motion-duration-standard) var(--sgds-motion-easing-standard);
+  outline-offset: -1px;
 }
 
 .sidebar-section--collapsed .sidebar-section-label {
@@ -42,7 +43,10 @@
 }
 
 .sidebar-section-content.sidebar-section-content--collapsed > div {
-  padding: var(--sgds-padding-xs);
   pointer-events: none;
   margin-top: -100%;
+}
+
+.sidebar-section--collapsed .sidebar-section-content--collapsed > div {
+  margin-top: 0;
 }
